# simple-cli-news

./: Cargo.toml  LICENSE  README.md
src/: list.rs  main.rs  request.rs
src/request/: config.rs
