[package]
name = "simple-cli-news"
version = "0.1.0"
edition = "2021"
authors = ["Waffleleroo (WaffleSoul4)"]
description = "A simple application that lets you view news with the terminal"

[license]
name = "MIT"
url = "https://opensource.org/licenses/MIT"

[dependencies]
colour = "2.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ureq = "2.10.1"
