[package]
name = "simple-cli-news"
version = "0.1.3"
edition = "2021"
authors = ["Waffleleroo (WaffleSoul4)"]
description = "A simple tool that lets you view news with the terminal"
license = "MIT"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"]}
clap = { version = "4.5.20", features = ["cargo"] }
colour = "2.1.0"
directories = "5.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"
serde_yml = "0.0.12"
ureq = "2.10.1"
